--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
   box-sizing: border-box;
 }
 
+/* Phan diem den pho bien */
 .section__container {
   max-width: var(--max-width);
   margin: auto;
@@ -35,6 +36,15 @@
   margin-inline: auto;
   color: var(--text-light);
   text-align: center;
+}
+
+/* phan hop thoai va tieu de trang*/
+.hero__section {
+  background-image: url("assets/airplane2.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: var(--extra-light);
 }
 
 .btn {
@@ -85,11 +95,14 @@ body {
 
 nav {
   position: relative;
-  isolation: isolate;
+  background: rgba(255, 255, 255, 0.6); /* nền trắng mờ */
+  position: fixed;
+  border-radius: 1rem;
+  padding: 2rem;
   top: 0;
-  width: 100vw;
-  z-index: 9;
-  background: linear-gradient(135deg, #e8f1ff, #f8fbff);
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .nav__header {
@@ -144,80 +157,6 @@ nav {
 .nav__btns {
   display: none;
 }
-
-header {
-  margin-top: 5rem;
-  padding-inline: 1rem;
-  position: relative;
-  isolation: isolate;
-  overflow: hidden;
-}
-
-header::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: calc(100% - 2rem);
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-image: url("assets/header-bg.jpg");
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 3rem;
-  z-index: -1;
-}
-
-.header__container {
-  display: grid;
-}
-
-.header__content {
-  padding: 4rem 1rem;
-}
-
-.header__content p {
-  margin-bottom: 5px;
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  text-align: center;
-}
-
-.header__content h1 {
-  margin-bottom: 2rem;
-  font-size: 4.5rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  line-height: 5.5rem;
-  text-align: center;
-}
-
-.header__btns {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.header__btns .btn {
-  padding: 1rem 2rem;
-}
-
-.header__btns a {
-  padding: 9px 13px;
-  font-size: 1.5rem;
-  color: var(--primary-color);
-  background-color: var(--white);
-  border-radius: 100%;
-}
-
-.header__btns a:hover {
-  color: var(--white);
-  background-color: var(--primary-color);
-}
-
 
 /* phan diem den pho bien */
 .destination__container {
@@ -319,78 +258,6 @@ header::before {
   }
 }
 
-.journey__grid {
-  margin-top: 2rem;
-  display: grid;
-  gap: 0 1rem;
-}
-
-.journey__card {
-  position: relative;
-  isolation: isolate;
-  padding-top: 4rem;
-  overflow: hidden;
-}
-
-.journey__card__bg {
-  padding: 2rem;
-  background-color: var(--extra-light);
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
-}
-
-.journey__card__bg span {
-  display: inline-block;
-  margin-bottom: 4rem;
-  font-size: 1.75rem;
-  color: var(--primary-color);
-}
-
-.journey__card__bg h4 {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--text-dark);
-}
-
-.journey__card__content {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-  background-color: var(--primary-color);
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
-  transition: 0.3s;
-}
-
-.journey__card:hover .journey__card__content {
-  top: 0;
-}
-
-.journey__card__content span {
-  display: inline-block;
-  margin-bottom: 1rem;
-  padding: 7px 9px;
-  font-size: 1rem;
-  color: var(--white);
-  border: 2px solid var(--white);
-  border-radius: 100%;
-}
-
-.journey__card__content h4 {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--white);
-}
-
-.journey__card__content p {
-  color: var(--extra-light);
-}
-
-
 /* gioi thieu ve Lotus Travel */
 .showcase__container {
   display: grid;
@@ -420,143 +287,6 @@ header::before {
   color: var(--extra-light);
   background-repeat: no-repeat;
   border-radius: 5px;
-}
-
-.banner__container {
-  display: grid;
-  gap: 2rem;
-}
-
-.banner__card {
-  padding: 2rem 1rem;
-  text-align: center;
-  background-color: var(--extra-light);
-  border-radius: 2rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-}
-
-.banner__card h4 {
-  font-size: 5rem;
-  font-weight: 500;
-  color: var(--primary-color);
-}
-
-.banner__card p {
-  color: var(--text-light);
-}
-
-.discover__grid {
-  margin-top: 4rem;
-  display: grid;
-  gap: 2rem;
-}
-
-.discover__card {
-  padding: 2rem 1rem;
-  text-align: center;
-  transition: 0.3s;
-  border-radius: 1rem;
-}
-
-.discover__card:hover {
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-}
-
-.discover__card span {
-  display: inline-block;
-  margin-bottom: 1rem;
-  padding: 10px 15px;
-  font-size: 1.5rem;
-  color: var(--primary-color);
-  background-color: rgba(40, 135, 255, 0.1);
-  border-radius: 100%;
-}
-
-.discover__card h4 {
-  max-width: 150px;
-  margin-inline: auto;
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: black;
-}
-
-.destination__card p {
-  color: black;
-}
-
-.destination__card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-}
-
-.swiper {
-  margin-top: 4rem;
-  width: 100%;
-}
-
-.swiper-slide {
-  min-width: 375px;
-}
-
-.client__card {
-  padding: 5px;
-  background-color: var(--extra-light);
-  border-radius: 1rem;
-  transition: 0.3s;
-}
-
-.client__card:hover {
-  background-color: var(--primary-color);
-}
-
-.client__content {
-  padding: 1rem;
-  background-color: var(--white);
-  border-radius: calc(1rem - 5px);
-}
-
-.client__rating {
-  margin-bottom: 1rem;
-  color: var(--primary-color);
-}
-
-.client__content p {
-  color: var(--text-dark);
-}
-
-.client__details {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.client__details img {
-  max-width: 50px;
-  border-radius: 100%;
-}
-
-.client__details h4 {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  transition: 0.3s;
-}
-
-.client__card:hover h4 {
-  color: var(--white);
-}
-
-.client__details h5 {
-  font-size: 1rem;
-  font-weight: 500;
-  color: var(--text-light);
-  transition: 0.3s;
-}
-
-.client__card:hover h5 {
-  color: var(--extra-light);
 }
 
 footer {
@@ -749,48 +479,7 @@ footer {
     background-color: var(--text-dark);
   }
 
-  header {
-    margin-top: 0;
-  }
-
-  .header__container {
-    grid-template-columns:
-      minmax(0, 1fr) repeat(5, minmax(0, calc(var(--max-width) / 5))) minmax(0, 1fr);
-  }
-
-  .header__content {
-    grid-column: 2/4;
-    padding-block: 8rem;
-  }
-
-  .header__content :is(p, h1) {
-    text-align: left;
-  }
-
-  .header__btns {
-    justify-content: flex-start;
-  }
-
-  .header__image {
-    grid-column: 4/8;
-    position: relative;
-    isolation: isolate;
-    height: 100%;
-  }
-
-  .header__image img {
-    position: absolute;
-    top: 2rem;
-    left: 0;
-    height: 100%;
-    width: unset;
-  }
-
   .destination__grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .journey__grid {
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -800,10 +489,6 @@ footer {
 
   .showcase__content {
     grid-column: 2/4;
-  }
-
-  .banner__container {
-    grid-template-columns: repeat(3, 1fr);
   }
 
   .discover__grid {
@@ -832,10 +517,11 @@ footer {
 
 /* phan booking */
 .booking-section {
-  background: #f0f8ff;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(15px);
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
   max-width: 1200px;
   margin: 30px auto;
   position: relative;
