--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-color: #87b3ea;
-  --primary-color-dark: #1d477a;
+  --primary-color-dark: #2b3746;
   --text-dark: #35265c;
   --text-light: #5d5e84;
   --extra-light: #f3f4f6;
@@ -45,6 +45,8 @@
   background-position: center;
   background-repeat: no-repeat;
   color: var(--extra-light);
+  padding: 3rem 2rem;
+  width: 100vw;
 }
 
 .btn {
@@ -137,7 +139,7 @@ nav {
   gap: 2rem;
   background-color: var(--primary-color);
   transition: transform 0.5s;
-  z-index: -1;
+  z-index: 999;
 }
 
 .nav__links.open {
@@ -151,7 +153,7 @@ nav {
 }
 
 .nav__links a:hover {
-  color: var(--text-dark);
+  color: var(--primary-color-dark);
 }
 
 .nav__btns {
@@ -526,6 +528,7 @@ footer {
   margin: 30px auto;
   position: relative;
   overflow: visible !important;
+  color: var(--primary-color-dark);
 }
 
 .booking-tabs {
@@ -543,6 +546,7 @@ footer {
   border-bottom: 3px solid transparent;
   transition: 0.3s;
   font-family: "Noto Serif", sans-serif;
+  color: var(--primary-color-dark);
 }
 
 .booking-tabs .tab.active {
@@ -562,7 +566,6 @@ footer {
   justify-content: center;
   gap: 20px;
   font-size: 0.95rem;
-  color: black;
   font-size: 16px;
 }
 
@@ -582,7 +585,6 @@ footer {
 
 .booking-group label {
   font-size: 16px;
-  color: black;
   margin-bottom: 5px;
 }
 
@@ -592,9 +594,43 @@ footer {
   border-radius: 6px;
   font-family: "Noto Serif", sans-serif;
   font-size: 16px;
+  color: var(--primary-color-dark);
 }
 
-.btn {
+.select-box {
+  border: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  cursor: pointer;
+  background: #fff;
+}
+
+.airport-popup {
+  position: fixed;
+  inset: 0;
+  display: none;
+  background: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.airport-popup.active {
+  display: flex;
+}
+
+.airport-list div {
+  padding: 0.5rem;
+  cursor: pointer;
+  border-bottom: 1px solid #eee;
+}
+
+.airport-list div:hover {
+  background: #f0f8ff;
+}
+
+/* button tim chuyen bay */
+.btn {    
   background: #35265c;
   color: var(--extra-light);
   border: none;
@@ -621,6 +657,7 @@ footer {
   background: #fff;
   transition: 0.2s;
   width: 120px;
+  color: var(--text-dark);
 }
 
 .passenger-box:hover {
@@ -638,7 +675,7 @@ footer {
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
   padding: 14px 18px;
   width: 260px;
-  z-index: 999;
+  z-index: 9999;
   display: none;
   animation: fadeIn 0.2s ease;
 }
@@ -667,14 +704,6 @@ footer {
   border-bottom: 1px solid #35265c;
 }
 
-.passenger-row:last-child {
-  border-bottom: none;
-}
-
-.passenger-row strong {
-  color: var(--primary-color-dark);
-}
-
 .counter {
   display: flex;
   align-items: center;
@@ -701,6 +730,7 @@ footer {
   width: 20px;
   text-align: center;
   font-weight: 600;
+  color: var(--text-dark);
 }
 
 /* phan feedback */
