--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
 
 /* phan hop thoai va tieu de trang*/
 .hero__section {
-  background-image: url("assets/airplane2.jpg");
+  background-image: url("assets/background3.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -89,6 +89,7 @@ ul {
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -557,7 +558,7 @@ footer {
 /* phan booking */
 .booking-section {
   background: rgba(255, 255, 255, 0.6);
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(20px);
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
@@ -568,7 +569,20 @@ footer {
   color: var(--primary-color-dark);
 }
 
-.booking-tabs {
+.booking-container,
+.checkin-container,
+.management-container {
+  display: none;
+}
+
+.booking-container.active,
+.checkin-container.active,
+.management-container.active {
+  display: block;
+}
+
+.booking-tabs,
+.checkin-tabs {
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
@@ -592,7 +606,7 @@ footer {
   font-weight: bold;
 }
 
-.booking-form {
+.tab-content {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -606,7 +620,7 @@ footer {
   font-size: 16px;
 }
 
-.booking-row {
+.content-row {
   display: flex;
   align-items: flex-end;
   flex-wrap: wrap;
@@ -618,6 +632,26 @@ footer {
   min-width: 160px;
   display: flex;
   flex-direction: column;
+}
+
+/* button tim chuyen bay */
+.btn {
+  background: #35265c;
+  color: var(--extra-light);
+  border: none;
+  padding: 10px 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-family: "Noto Serif", sans-serif;
+}
+
+.btn:hover {
+  background: #90a9c5;
+}
+
+#return-date {
+  transition: all 0.3s ease;
 }
 
 .booking-group label {
@@ -642,45 +676,41 @@ footer {
   background: #fff;
 }
 
-.airport-popup {
-  position: fixed;
-  inset: 0;
-  display: none;
-  background: rgba(0, 0, 0, 0.3);
+.checkin-group {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  ;
+}
+
+.checkin-group input {
+  padding: 10px 10px;
+  border: none;
+  border-radius: 8px;
+  font-family: "Noto Serif", sans-serif;
+  font-size: 16px;
+  color: var(--primary-color-dark);
+}
+
+.checkin-group label {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.checkin-row {
+  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  gap: 30px;
+  margin-top: 20px;
 }
 
-.airport-popup.active {
-  display: flex;
+@media (max-width: 600px) {
+  .checkin-row {
+    flex-direction: column;
+  }
 }
 
-.airport-list div {
-  padding: 0.5rem;
-  cursor: pointer;
-  border-bottom: 1px solid #eee;
-}
-
-.airport-list div:hover {
-  background: #f0f8ff;
-}
-
-/* button tim chuyen bay */
-.btn {
-  background: #35265c;
-  color: var(--extra-light);
-  border: none;
-  padding: 10px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: 0.3s;
-  font-family: "Noto Serif", sans-serif;
-}
-
-.btn:hover {
-  background: #90a9c5;
-}
 
 .passenger-group {
   position: relative;
