first update Oct 21

--- a/style/booking.css
+++ b/style/booking.css
@@ -101,7 +101,7 @@ h1 {
 }
 
 .price-block {
-  background: #35265c;
+  background: #58a6cd;
   color: #fff;
   border-radius: 0.5rem;
   padding-right: 1rem;      
@@ -131,7 +131,7 @@ h1 {
 }
 
 .confirm-btn {
-  background-color: #029fb1;
+  background-color: #068694;
   color: white;
   padding: 8px 16px;
   border: none;
