--- a/style/passenger-info.css
+++ b/style/passenger-info.css
@@ -21,9 +21,8 @@
 h1 {
   width: 100vw;
   background: linear-gradient(
-    rgba(135, 179, 234, 0.5),
-    rgba(43, 55, 70, 0.5)
-  );
+      rgba(178, 201, 229, 0.5),
+      #148baf80);
   backdrop-filter: blur(6px);
   color: white;
   padding: 25px;
