--- a/style/seat-selection.css
+++ b/style/seat-selection.css
@@ -26,8 +26,9 @@ body {
 }
 
 h1 {
-  background: linear-gradient(rgba(135, 179, 234, 0.5),
-      rgba(43, 55, 70, 0.5));
+  background: linear-gradient(
+      rgba(178, 201, 229, 0.5),
+      #148baf80);
   backdrop-filter: blur(6px);
   color: white;
   padding: 25px;
@@ -187,7 +188,7 @@ h1 {
 }
 
 button {
-  background: #a7cae9;
+  background: #ffffff;
   color: var(--text-dark);
   padding: 10px 14px;
   border-radius: 8px;
