--- a/style/interface.css
+++ b/style/interface.css
@@ -158,6 +158,7 @@ nav {
   transition: all 0.3s ease;
   cursor: pointer;
   text-align: center;
+  margin-bottom: 0.4rem;
 }
 
 .destination__card img {
